--- a/scss/pages/index/_round-top.scss
+++ b/scss/pages/index/_round-top.scss
@@ -17,7 +17,7 @@
 		}
 
 		@include breakpoint(960) {
-			max-width: rem-calc(320);
+			// max-width: rem-calc(320);
 		}
 	}
 
@@ -25,8 +25,8 @@
 		margin-bottom: rem-calc(32);
 
 		@include breakpoint(960) {
-			float: left;
-			padding: 0 rem-calc(16) 0 rem-calc(32);
+			// float: left;
+			// padding: 0 rem-calc(16) 0 rem-calc(32);
 		}
 
 		@include breakpoint(1000) {
@@ -46,11 +46,6 @@
 		@include breakpoint(medium) {
 			max-width: none;
 		}
-
-		@include breakpoint(960) {
-			text-align: unset;
-			padding-top: rem-calc(20);
-		}
 	}
 
 	.logo-wrap {
@@ -67,7 +62,7 @@
 		}
 
 		@include breakpoint(960) {
-			padding: 0 rem-calc(32) 0 0;
+			// padding: 0 rem-calc(32) 0 0;
 		}
 	}
 
@@ -80,7 +75,9 @@
 		}
 
 		@include breakpoint(960) {
-			padding: 0 rem-calc(32) 0 0;
+			// padding: 0 rem-calc(32) 0 0;
+			// padding: 0;
+			padding: 0 rem-calc(32);
 		}
 	}
 
