--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -85,7 +85,7 @@ $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$body-safe-padding: false;
+$body-safe-padding: true;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
