Activate custom skin for ios15

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -23,6 +23,8 @@
 
 	<link href="{{ cdn }}<?php autoVer('/css/app.css'); ?>" rel="stylesheet">
 
+	<meta name="theme-color" content="#697b99">
+
 	<script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
