--- a/css/app.css
+++ b/css/app.css
@@ -14696,18 +14696,30 @@ body {
   }
 }
 
-@media print, screen and (min-width: 40em) and (max-width: 63.99875em) {
+@media print, screen and (min-width: 40em) {
+  .top-bar#main-menu {
+    height: 50px;
+  }
   .top-bar#main-menu ul {
     background-color: transparent;
   }
-  .top-bar#main-menu .logo-wrap {
+  .top-bar#main-menu .logo-wrap img.logo-pot {
+    width: 55px;
     position: absolute;
     top: 0;
     left: 0;
   }
+}
+
+@media screen and (min-width: 40em) and (min-width: 45em) {
   .top-bar#main-menu .logo-wrap img.logo-pot {
-    max-width: 55px;
+    position: unset;
+    float: left;
+    margin-top: 40px;
   }
+}
+
+@media print, screen and (min-width: 40em) {
   .top-bar#main-menu .logo-wrap .wordmark {
     text-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
     color: #fefefe;
@@ -14720,14 +14732,23 @@ body {
   }
 }
 
-@media screen and (min-width: 40em) and (max-width: 63.99875em) and (min-width: 45em) {
+@media screen and (min-width: 40em) and (min-width: 45em) {
   .top-bar#main-menu .logo-wrap .wordmark {
     display: block;
     visibility: visible;
   }
 }
 
-@media print, screen and (min-width: 40em) and (max-width: 63.99875em) {
+@media screen and (min-width: 40em) and (min-width: 46.875em) {
+  .top-bar#main-menu .logo-wrap .wordmark {
+    position: unset;
+    float: left;
+    padding-top: 3.125rem;
+    margin-left: -2.5rem;
+  }
+}
+
+@media print, screen and (min-width: 40em) {
   .top-bar#main-menu .menu a {
     color: #fff;
     font-weight: bold;
