--- a/css/app.css
+++ b/css/app.css
@@ -14824,6 +14824,14 @@ body {
   transition: opacity .2s ease-in;
 }
 
+.location-section {
+  padding-top: 2.5rem;
+  padding-bottom: 5rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(105, 123, 153, 0.5)), to(rgba(105, 123, 153, 0.5))), url("/img/index/location/facade-draft/facade-draft-a60.jpg") center/cover no-repeat;
+  background: -webkit-linear-gradient(rgba(105, 123, 153, 0.5), rgba(105, 123, 153, 0.5)), url("/img/index/location/facade-draft/facade-draft-a60.jpg") center/cover no-repeat;
+  background: linear-gradient(rgba(105, 123, 153, 0.5), rgba(105, 123, 153, 0.5)), url("/img/index/location/facade-draft/facade-draft-a60.jpg") center/cover no-repeat;
+}
+
 .round-top-section {
   background: #eff0f8;
 }
