Tweak head to disable auto phone styling ios

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -23,6 +23,7 @@
 	<link href="{{ cdn }}<?php autoVer('/css/app.css'); ?>" rel="stylesheet">
 
 	<meta name="theme-color" content="#697b99">
+	<meta name="format-detection" content="telephone=no">
 
 	<script type="application/ld+json">
 	{
