Null excess vendor and tweak scss

--- a/scss/pages/index/_round-top.scss
+++ b/scss/pages/index/_round-top.scss
@@ -42,9 +42,9 @@
 			max-width: none;
 		}
 
-		@include breakpoint(large) {
-			text-align: unset;
-		}
+		// @include breakpoint(large) {
+		// 	text-align: unset;
+		// }
 	}
 
 	.logo-wrap {
