--- a/scss/app.scss
+++ b/scss/app.scss
@@ -63,9 +63,9 @@
 // #2 Pages
 @import 'pages/_pages.scss';
 
-.example {
-    display: grid;
-    transition: all .5s;
-    user-select: none;
-    background: linear-gradient(to bottom, white, black);
-}
+// .example {
+//     display: grid;
+//     transition: all .5s;
+//     user-select: none;
+//     background: linear-gradient(to bottom, white, black);
+// }
