--- a/css/app.css
+++ b/css/app.css
@@ -13312,3 +13312,10 @@ body {
   background: #fff;
   border-radius: 0.25rem;
 }
+
+.example {
+  display: grid;
+  transition: all .5s;
+  user-select: none;
+  background: linear-gradient(to bottom, white, black);
+}
