Move to appropriate partial

--- a/css/app.css
+++ b/css/app.css
@@ -11150,6 +11150,14 @@ ol.list-upper-roman {
   font-weight: 900 !important;
 }
 
+a.button {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+a.button:hover {
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+}
+
 .text-black {
   color: #000 !important;
 }
@@ -11187,7 +11195,7 @@ h6,
 }
 
 .cursive {
-  font-family: "Parisienne", cursive;
+  font-family: 'Parisienne', cursive;
   line-height: 1;
 }
 
@@ -12580,14 +12588,6 @@ img.mfp-img {
     padding-left: 6px;
     padding-right: 6px;
   }
-}
-
-a.button {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
-}
-
-a.button:hover {
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
 }
 
 body {
