--- a/scss/elements/typography/_typography.scss
+++ b/scss/elements/typography/_typography.scss
@@ -14,7 +14,7 @@ h6,
 }
 
 .cursive {
-	font-family: "Parisienne", cursive;
+	font-family: 'Parisienne', cursive;
 	line-height: 1;
 }
 
@@ -41,38 +41,38 @@ h4.cursive,
 
 @media print, screen and (min-width: 40em) {
 	h1.cursive,
-.h1.cursive {
+	.h1.cursive {
 		font-size: 70px;
 	}
 	h2.cursive,
-.h2.cursive {
+	.h2.cursive {
 		font-size: 50px;
 	}
 	h3.cursive,
-.h3.cursive {
+	.h3.cursive {
 		font-size: 38px;
 	}
 	h4.cursive,
-.h4.cursive {
+	.h4.cursive {
 		font-size: 28px;
 	}
 }
 
 @media only screen and (min-width : 64em) {
 	h1.cursive,
-.h1.cursive {
+	.h1.cursive {
 		font-size: 110px;
 	}
 	h2.cursive,
-.h2.cursive {
+	.h2.cursive {
 		font-size: 68px;
 	}
 	h3.cursive,
-.h3.cursive {
+	.h3.cursive {
 		font-size: 42px;
 	}
 	h4.cursive,
-.h4.cursive {
+	.h4.cursive {
 		font-size: 26px;
 	}
 }
