--- a/scss/pages/index/old/_old.scss
+++ b/scss/pages/index/old/_old.scss
@@ -1,4 +1,4 @@
-@import '_old-index.scss';
-
 // @import '_old-header.scss';
 @import '_old-hipBanner.scss';
+@import '_old-index.scss';
+@import '_old-interiorGallery.scss';
