Move all old scss to new sub partials

--- a/scss/pages/index/old/_old.scss
+++ b/scss/pages/index/old/_old.scss
@@ -1,4 +1,6 @@
-// @import '_old-header.scss';
+@import '_old-gardens.scss';
+@import '_old-header.scss';
 @import '_old-hipBanner.scss';
 @import '_old-index.scss';
 @import '_old-interiorGallery.scss';
+@import '_old-roundTop.scss';
