--- a/css/app.css
+++ b/css/app.css
@@ -12590,6 +12590,86 @@ img.mfp-img {
   }
 }
 
+#index.index .gardensSection {
+  border-top: 20px solid #fefefe;
+}
+
+#index.index .gardensSection .header {
+  padding: 60px 0;
+  background: linear-gradient(rgba(105, 123, 153, 0.7), rgba(105, 123, 153, 0.7)), url("/img/gardens/jardin-de-france-gardens-entry.jpg") center center/cover no-repeat;
+}
+
+#index.index .gardensSection .gallery img {
+  border-radius: 3px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+  border: 4px solid #fefefe;
+  margin-bottom: 30px;
+  max-width: 340px;
+  width: 100%;
+}
+
+#index.index .gardensSection .imageBanner {
+  background: #697b99;
+}
+
+#index.index .gardensSection .imageBanner img {
+  border: 4px solid #fefefe;
+}
+
+@media only screen and (min-width: 40em) {
+  #index.index .gardensSection .header {
+    padding: 90px 0;
+  }
+  #index.index .gardensSection .imageBanner {
+    padding-bottom: 20px;
+  }
+}
+
+header {
+  background: #697b99;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
+  height: 55px;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+
+.logo img {
+  position: absolute;
+  max-width: 65px;
+  height: auto;
+  float: left;
+  z-index: 55;
+}
+
+.logo h1 {
+  position: absolute;
+  text-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+  z-index: 55;
+  color: #fefefe;
+  font-size: 60px;
+}
+
+@media screen and (min-width: 751px) {
+  .logo h1 {
+    display: none;
+    visibility: hidden;
+  }
+}
+
+@media screen and (min-width: 920px) {
+  .logo h1 {
+    display: block;
+    visibility: visible;
+  }
+}
+
+@media only screen and (min-width: 40em) {
+  .logo h1 {
+    font-size: 70px;
+  }
+}
+
 .hipBanner {
   padding: 60px 0;
 }
@@ -12649,62 +12729,6 @@ body {
     width: 100%;
     height: auto;
     max-width: 100%;
-  }
-}
-
-.roundTop-section {
-  background: linear-gradient(rgba(105, 123, 153, 0.8), rgba(105, 123, 153, 0.8)), url("/img/index/round-top/2018/spring/marburger-farms/background.jpg") center/cover no-repeat;
-}
-
-.roundTop-section .prose {
-  max-width: 500px;
-  padding: 50px 0;
-}
-
-@media only screen and (min-width: 40em) {
-  .roundTop-section h2 {
-    font-size: 70px;
-  }
-}
-
-.roundTop-section #masonry-grid .tile img {
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
-  border-radius: 4px;
-  border: 4px solid #fefefe;
-}
-
-#index.index .gardensSection {
-  border-top: 20px solid #fefefe;
-}
-
-#index.index .gardensSection .header {
-  padding: 60px 0;
-  background: linear-gradient(rgba(105, 123, 153, 0.7), rgba(105, 123, 153, 0.7)), url("/img/gardens/jardin-de-france-gardens-entry.jpg") center center/cover no-repeat;
-}
-
-#index.index .gardensSection .gallery img {
-  border-radius: 3px;
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
-  border: 4px solid #fefefe;
-  margin-bottom: 30px;
-  max-width: 340px;
-  width: 100%;
-}
-
-#index.index .gardensSection .imageBanner {
-  background: #697b99;
-}
-
-#index.index .gardensSection .imageBanner img {
-  border: 4px solid #fefefe;
-}
-
-@media only screen and (min-width: 40em) {
-  #index.index .gardensSection .header {
-    padding: 90px 0;
-  }
-  #index.index .gardensSection .imageBanner {
-    padding-bottom: 20px;
   }
 }
 
@@ -12802,6 +12826,27 @@ body {
   .interiorGallery .yellow-bar {
     margin: 50px 0;
   }
+}
+
+.roundTop-section {
+  background: linear-gradient(rgba(105, 123, 153, 0.8), rgba(105, 123, 153, 0.8)), url("/img/index/round-top/2018/spring/marburger-farms/background.jpg") center/cover no-repeat;
+}
+
+.roundTop-section .prose {
+  max-width: 500px;
+  padding: 50px 0;
+}
+
+@media only screen and (min-width: 40em) {
+  .roundTop-section h2 {
+    font-size: 70px;
+  }
+}
+
+.roundTop-section #masonry-grid .tile img {
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+  border-radius: 4px;
+  border: 4px solid #fefefe;
 }
 
 .small-splash {
