Try with alternative bg img

--- a/scss/pages/index/_round-top.scss
+++ b/scss/pages/index/_round-top.scss
@@ -8,6 +8,7 @@
 	margin-top: 80px;
 	padding: 100px 0;
 	background: #fff url('/img/jdf-showroom/jdf-showroom.jpg') center/cover no-repeat;
+	background: #fff url('/img/jdf-showroom/jdf-showroom-2.jpg') center/cover no-repeat;
 	// color: #fff;
 	// text-align: center;
 	position: relative;
