--- a/css/app.css
+++ b/css/app.css
@@ -13180,6 +13180,7 @@ body {
   margin-top: 80px;
   padding: 100px 0;
   background: #fff url("/img/jdf-showroom/jdf-showroom.jpg") center/cover no-repeat;
+  background: #fff url("/img/jdf-showroom/jdf-showroom-2.jpg") center/cover no-repeat;
   position: relative;
 }
 
