Tweak margin and border

--- a/scss/pages/index/_round-top.scss
+++ b/scss/pages/index/_round-top.scss
@@ -5,7 +5,8 @@
 	// rgba(102,102,102,0.85)
 	// ), url('/img/jdf-showroom/jdf-showroom.jpg') center center/cover no-repeat;
 
-	margin-top: 80px;
+	// margin-top: 20px;
+	border-top: 20px solid #fefefe;
 	padding: 100px 0;
 	background: #fff url('/img/jdf-showroom/jdf-showroom.jpg') center/cover no-repeat;
 	background: #fff url('/img/jdf-showroom/jdf-showroom-2.jpg') center/cover no-repeat;
