--- a/css/app.css
+++ b/css/app.css
@@ -13179,8 +13179,7 @@ body {
 .round-top-section {
   border-top: 20px solid #fefefe;
   padding: 100px 0;
-  background: #fff url("/img/jdf-showroom/jdf-showroom.jpg") center/cover no-repeat;
-  background: #fff url("/img/jdf-showroom/jdf-showroom-2.jpg") center/cover no-repeat;
+  background: #eff0f8 url("/img/jdf-showroom/jdf-showroom-2.jpg") center/cover no-repeat;
   position: relative;
 }
 
